[gd_scene load_steps=62 format=3 uid="uid://celowdhme32mc"]

[ext_resource type="Script" path="res://scripts/mini_boss_level.gd" id="1_n1562"]
[ext_resource type="Script" path="res://scripts/block_area.gd" id="2_2uxox"]
[ext_resource type="Texture2D" uid="uid://6wr5qgscvvvx" path="res://images/mini_boss/pink/__alien_creature_5_pink_die_000.png" id="3_rp7jx"]
[ext_resource type="Texture2D" uid="uid://cubsxr8loiqfv" path="res://images/mini_boss/pink/__alien_creature_5_pink_die_001.png" id="4_5vets"]
[ext_resource type="Texture2D" uid="uid://1lpca8guvpff" path="res://images/mini_boss/pink/__alien_creature_5_pink_die_002.png" id="5_g8kk6"]
[ext_resource type="Texture2D" uid="uid://xw5vf41bqpfw" path="res://images/mini_boss/pink/__alien_creature_5_pink_die_003.png" id="6_38j52"]
[ext_resource type="Texture2D" uid="uid://qlui16o7eje2" path="res://images/mini_boss/pink/__alien_creature_5_pink_die_004.png" id="7_tnvsy"]
[ext_resource type="Texture2D" uid="uid://bb238csx4xurt" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_000.png" id="8_hd2g2"]
[ext_resource type="Texture2D" uid="uid://bn2tqusu7q2gj" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_001.png" id="9_d4bf3"]
[ext_resource type="Texture2D" uid="uid://csqme4ilebeuu" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_002.png" id="10_hf7h1"]
[ext_resource type="Texture2D" uid="uid://c7qr6eabn3rk0" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_003.png" id="11_ind53"]
[ext_resource type="Texture2D" uid="uid://b2o13spm6igeq" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_004.png" id="12_uysiw"]
[ext_resource type="Texture2D" uid="uid://cgmn7bmd6rjhl" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_005.png" id="13_0jwau"]
[ext_resource type="Texture2D" uid="uid://ykph6dukf5k1" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_006.png" id="14_f4nri"]
[ext_resource type="Texture2D" uid="uid://1oaay6b300sr" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_007.png" id="15_nikcv"]
[ext_resource type="Texture2D" uid="uid://co18evs8ft3i3" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_008.png" id="16_t4ecj"]
[ext_resource type="Texture2D" uid="uid://clxfm1tntoja6" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_009.png" id="17_h5k63"]
[ext_resource type="Texture2D" uid="uid://cmcmwt23e6nt4" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_010.png" id="18_1pq7v"]
[ext_resource type="Texture2D" uid="uid://dlxqbfthtfjt5" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_011.png" id="19_lda2f"]
[ext_resource type="Texture2D" uid="uid://cr3bqy7qqu8lb" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_012.png" id="20_6lerj"]
[ext_resource type="Texture2D" uid="uid://gr2e2bprx6nv" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_013.png" id="21_1xqae"]
[ext_resource type="Texture2D" uid="uid://cpk0nv4vj2wkc" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_014.png" id="22_5clmp"]
[ext_resource type="Texture2D" uid="uid://bsyqyxb6fgviw" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_015.png" id="23_114y0"]
[ext_resource type="Texture2D" uid="uid://jqpho8ijqu1s" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_016.png" id="24_4x1gm"]
[ext_resource type="Texture2D" uid="uid://dchqdro0ydvjb" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_017.png" id="25_jw6b4"]
[ext_resource type="Texture2D" uid="uid://ckosxkm13m3s8" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_018.png" id="26_3mf4y"]
[ext_resource type="Texture2D" uid="uid://bpb3vjwx6x4u6" path="res://images/mini_boss/pink/__alien_creature_5_pink_idle_019.png" id="27_i7mcr"]
[ext_resource type="Texture2D" uid="uid://dpjewbtr65sxw" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_000.png" id="28_e47l4"]
[ext_resource type="Texture2D" uid="uid://dikajc8oag3yh" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_001.png" id="29_hfyer"]
[ext_resource type="Texture2D" uid="uid://d3ji20b408ovl" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_002.png" id="30_t0xas"]
[ext_resource type="Texture2D" uid="uid://bl5xavdqbq75r" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_003.png" id="31_c6pgn"]
[ext_resource type="Texture2D" uid="uid://cu5qxdgf2xupb" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_004.png" id="32_f6n26"]
[ext_resource type="Texture2D" uid="uid://brd7oh1yq17oo" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_005.png" id="33_obd1c"]
[ext_resource type="Texture2D" uid="uid://da07tx4ihu3jx" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_006.png" id="34_hhf4i"]
[ext_resource type="Texture2D" uid="uid://ciymsa1x8a1dv" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_007.png" id="35_vdw7h"]
[ext_resource type="Texture2D" uid="uid://cuquln1qqelol" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_008.png" id="36_k0aif"]
[ext_resource type="Texture2D" uid="uid://bqpjcarwg0asc" path="res://images/mini_boss/pink/__alien_creature_5_pink_roar_009.png" id="37_n0iit"]
[ext_resource type="PackedScene" uid="uid://dutqe76oy7gik" path="res://scenes/boss_level_components/boss_level_window.tscn" id="39_3bm2w"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/intro_level/quiz_code_pages/quiz_page_topic2.gd" id="40_funoa"]
[ext_resource type="FontFile" uid="uid://b47jyqncn0ah1" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Regular.ttf" id="41_bkf5m"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/intro_level/quiz_code_pages/intro_code_page_topic2.gd" id="43_otsg4"]
[ext_resource type="FontFile" uid="uid://cwbqlu04cyyvj" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Bold.ttf" id="43_uetrs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cguhy"]
size = Vector2(963, 644)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rqvw"]
size = Vector2(958, 640.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvki5"]
size = Vector2(119.5, 643.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_ebl7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rp7jx")
}, {
"duration": 1.0,
"texture": ExtResource("4_5vets")
}, {
"duration": 1.0,
"texture": ExtResource("5_g8kk6")
}, {
"duration": 1.0,
"texture": ExtResource("6_38j52")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}, {
"duration": 1.0,
"texture": ExtResource("7_tnvsy")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_hd2g2")
}, {
"duration": 1.0,
"texture": ExtResource("9_d4bf3")
}, {
"duration": 1.0,
"texture": ExtResource("10_hf7h1")
}, {
"duration": 1.0,
"texture": ExtResource("11_ind53")
}, {
"duration": 1.0,
"texture": ExtResource("12_uysiw")
}, {
"duration": 1.0,
"texture": ExtResource("13_0jwau")
}, {
"duration": 1.0,
"texture": ExtResource("14_f4nri")
}, {
"duration": 1.0,
"texture": ExtResource("15_nikcv")
}, {
"duration": 1.0,
"texture": ExtResource("16_t4ecj")
}, {
"duration": 1.0,
"texture": ExtResource("17_h5k63")
}, {
"duration": 1.0,
"texture": ExtResource("18_1pq7v")
}, {
"duration": 1.0,
"texture": ExtResource("19_lda2f")
}, {
"duration": 1.0,
"texture": ExtResource("20_6lerj")
}, {
"duration": 1.0,
"texture": ExtResource("21_1xqae")
}, {
"duration": 1.0,
"texture": ExtResource("22_5clmp")
}, {
"duration": 1.0,
"texture": ExtResource("23_114y0")
}, {
"duration": 1.0,
"texture": ExtResource("24_4x1gm")
}, {
"duration": 1.0,
"texture": ExtResource("25_jw6b4")
}, {
"duration": 1.0,
"texture": ExtResource("26_3mf4y")
}, {
"duration": 1.0,
"texture": ExtResource("27_i7mcr")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"right_answer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_e47l4")
}, {
"duration": 1.0,
"texture": ExtResource("29_hfyer")
}, {
"duration": 1.0,
"texture": ExtResource("30_t0xas")
}, {
"duration": 1.0,
"texture": ExtResource("31_c6pgn")
}, {
"duration": 1.0,
"texture": ExtResource("32_f6n26")
}, {
"duration": 1.0,
"texture": ExtResource("33_obd1c")
}, {
"duration": 1.0,
"texture": ExtResource("34_hhf4i")
}, {
"duration": 1.0,
"texture": ExtResource("35_vdw7h")
}, {
"duration": 1.0,
"texture": ExtResource("36_k0aif")
}, {
"duration": 1.0,
"texture": ExtResource("37_n0iit")
}],
"loop": false,
"name": &"wrong_answer",
"speed": 8.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_tu174"]
font = ExtResource("43_uetrs")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_8g3qe"]
font = ExtResource("41_bkf5m")
font_size = 20
font_color = Color(1, 0.294118, 0.803922, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0svr"]
font = ExtResource("41_bkf5m")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dv4lf"]
font = ExtResource("41_bkf5m")
font_size = 20
font_color = Color(1, 1, 1, 0.984314)

[sub_resource type="Animation" id="Animation_kivbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5hlbm"]
resource_name = "text_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xycbe"]
_data = {
"RESET": SubResource("Animation_kivbn"),
"text_animation": SubResource("Animation_5hlbm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2riv2"]
bg_color = Color(1, 0.294118, 0.803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eocmm"]
bg_color = Color(1, 0.294118, 0.803922, 1)

[sub_resource type="Animation" id="Animation_2vdb3"]
length = 0.001

[sub_resource type="Animation" id="Animation_fv11m"]
resource_name = "block_area"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-566, -538), Vector2(-576, -538), Vector2(-556, -538), Vector2(-606, -538), Vector2(-576, -538), Vector2(-566, -538)]
}

[sub_resource type="Animation" id="Animation_j55cl"]
resource_name = "display_window"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cwsnv"]
resource_name = "dissolve_window"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bqsxn"]
resource_name = "quiz_to_code"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window/quiz_page:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boss_encounter_area/boss_level_window/intro_code_page:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.6, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vb8hw"]
_data = {
"RESET": SubResource("Animation_2vdb3"),
"block_area": SubResource("Animation_fv11m"),
"display_window": SubResource("Animation_j55cl"),
"dissolve_window": SubResource("Animation_cwsnv"),
"quiz_to_code": SubResource("Animation_bqsxn")
}

[node name="mini_boss_intro" type="Node2D"]
position = Vector2(567, 589)
script = ExtResource("1_n1562")

[node name="block_area" type="StaticBody2D" parent="."]
script = ExtResource("2_2uxox")

[node name="area_2d" type="Area2D" parent="block_area"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area/area_2d"]
show_behind_parent = true
position = Vector2(39.5, -267)
shape = SubResource("RectangleShape2D_cguhy")
debug_color = Color(0.992157, 0, 0.278431, 0.0352941)

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area"]
show_behind_parent = true
position = Vector2(40, -266.625)
shape = SubResource("RectangleShape2D_4rqvw")
debug_color = Color(1, 0.243137, 0.27451, 0.341176)

[node name="boss_encounter_area" type="Area2D" parent="."]

[node name="collision_shape_2d" type="CollisionShape2D" parent="boss_encounter_area"]
show_behind_parent = true
position = Vector2(-506.75, -268)
shape = SubResource("RectangleShape2D_uvki5")

[node name="animated_sprite_2d" type="AnimatedSprite2D" parent="boss_encounter_area"]
position = Vector2(374, -19)
scale = Vector2(0.510638, 0.575847)
sprite_frames = SubResource("SpriteFrames_ebl7p")
animation = &"wrong_answer"
autoplay = "idle"
frame = 9
frame_progress = 1.0

[node name="boss_level_window" parent="boss_encounter_area" instance=ExtResource("39_3bm2w")]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
offset_left = -566.0
offset_top = -538.0
offset_right = 588.0
offset_bottom = 110.0
scale = Vector2(0.8, 0.8)
metadata/_edit_group_ = true

[node name="quiz_page" type="Control" parent="boss_encounter_area/boss_level_window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("40_funoa")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/quiz_page"]
layout_mode = 0
offset_left = 6.0
offset_right = 1155.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0)

[node name="question_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
offset_left = 107.0
offset_top = 168.0
offset_right = 1080.0
offset_bottom = 261.0
metadata/_edit_group_ = true

[node name="question_label" type="RichTextLabel" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/question_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/bold_font = ExtResource("41_bkf5m")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true

[node name="options_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466132
anchor_top = 0.5
anchor_right = 0.521833
anchor_bottom = 0.5
offset_left = -211.586
offset_top = -150.36
offset_right = 172.414
offset_bottom = 123.64
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
alignment = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="option_button1" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_bkf5m")
theme_override_font_sizes/font_size = 19
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="option_button2" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_bkf5m")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button3" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_bkf5m")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button4" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("41_bkf5m")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="intro_code_page" type="Control" parent="boss_encounter_area/boss_level_window"]
modulate = Color(1, 1, 1, 0)
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("43_otsg4")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/intro_code_page"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="code_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color"]
clip_contents = true
layout_direction = 1
layout_mode = 2
offset_left = 31.0
offset_top = 44.0
offset_right = 851.0
offset_bottom = 597.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="problem_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="problem_label" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/problem_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
text = "Problem: Calculate the Average of Three Numbers"
label_settings = SubResource("LabelSettings_tu174")
clip_text = true

[node name="panel" type="Panel" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="line_num_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 503.0

[node name="line_number" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel/line_num_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 1)
theme_override_font_sizes/font_size = 19
text = "1

2

3

"
label_settings = SubResource("LabelSettings_8g3qe")

[node name="code_template_conatiner" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 20.0
offset_right = 708.0
offset_bottom = 480.0

[node name="code_template_label" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel/code_template_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "                       Number1, Number2, Number3

Calculate Average = 
    
                      \"The average of the three numbers is:\", 

    "
label_settings = SubResource("LabelSettings_e0svr")

[node name="player_answer" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 49.0
offset_top = 19.0
offset_right = 168.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("41_bkf5m")
item_count = 3
popup/item_0/text = "Input"
popup/item_0/id = 0
popup/item_1/text = "Calculate"
popup/item_1/id = 1
popup/item_2/text = "Display"
popup/item_2/id = 2

[node name="player_answer2" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 260.0
offset_top = 75.0
offset_right = 610.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("41_bkf5m")
item_count = 3
popup/item_0/text = "Number1 + Number2 + Number3 / 3"
popup/item_0/id = 0
popup/item_1/text = "(Number1 + Number2 + Number3) / 3"
popup/item_1/id = 1
popup/item_2/text = "(Number1 + Number2) / 3"
popup/item_2/id = 2

[node name="player_answer3" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 51.0
offset_top = 133.0
offset_right = 170.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("41_bkf5m")
item_count = 3
popup/item_0/text = "Input"
popup/item_0/id = 0
popup/item_1/text = "Calculate"
popup/item_1/id = 1
popup/item_2/text = "Display"
popup/item_2/id = 2

[node name="player_answer4" type="OptionButton" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 586.0
offset_top = 135.0
offset_right = 695.0
offset_bottom = 167.0
theme_override_fonts/font = ExtResource("41_bkf5m")
item_count = 3
popup/item_0/text = "Average"
popup/item_0/id = 0
popup/item_1/text = "average"
popup/item_1/id = 1
popup/item_2/text = "Avrage"
popup/item_2/id = 2

[node name="feedback_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color"]
layout_mode = 2
offset_left = 868.0
offset_top = 98.0
offset_right = 1128.0
offset_bottom = 597.0

[node name="panel_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="panel2" type="Panel" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="feedback_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container/panel2"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 240.0
offset_bottom = 486.0

[node name="feedback_label" type="Label" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 0.431373)
label_settings = SubResource("LabelSettings_dv4lf")
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
root_node = NodePath("../../../../../run_button_conatiner")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_xycbe")
}

[node name="run_button_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color"]
layout_mode = 2
offset_left = 1014.0
offset_top = 50.0
offset_right = 1122.0
offset_bottom = 90.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.09

[node name="run_button" type="Button" parent="boss_encounter_area/boss_level_window/intro_code_page/background_color/run_button_conatiner"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("41_bkf5m")
theme_override_styles/normal = SubResource("StyleBoxFlat_2riv2")
text = "Run"

[node name="health_bar" type="ProgressBar" parent="boss_encounter_area/boss_level_window"]
layout_mode = 0
offset_left = 858.0
offset_top = 16.0
offset_right = 1127.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_eocmm")

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area"]
process_priority = 2
root_node = NodePath("../..")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_vb8hw")
}

[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button1" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_1_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button2" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_2_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button3" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_3_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button4" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_4_pressed" flags=18]
[connection signal="all_correct" from="boss_encounter_area/boss_level_window/intro_code_page" to="." method="_on_code_page_all_correct"]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/intro_code_page/background_color/run_button_conatiner/run_button" to="boss_encounter_area/boss_level_window/intro_code_page" method="_on_run_button_pressed" flags=18]
